log
Fri 29 Mar 2024 03:48:56 AM UTC: 
 list.c | 67 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 63 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:19: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   50 |   list->current = current->next
      |                   ^~~~~~~
      |                   popCurrent
list.c:50:19: note: each undeclared identifier is reported only once for each function it appears in
list.c:50:32: error: expected ‘;’ before ‘return’
   50 |   list->current = current->next
      |                                ^
      |                                ;
   51 |   return list->current
      |   ~~~~~~                        
list.c: In function ‘prevList’:
list.c:59:19: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   59 |   list->current = current->prev
      |                   ^~~~~~~
      |                   popCurrent
list.c:59:32: error: expected ‘;’ before ‘return’
   59 |   list->current = current->prev
      |                                ^
      |                                ;
   60 |   return list->current;
      |   ~~~~~~                        
list.c: In function ‘pushFront’:
list.c:76:31: error: expected ‘;’ before ‘}’ token
   76 |     list->current = nuevo_nodo
      |                               ^
      |                               ;
   77 |   }
      |   ~                            
list.c: In function ‘popCurrent’:
list.c:118:7: error: ‘temp’ undeclared (first use in this function)
  118 |       temp = list->head->data
      |       ^~~~
list.c:118:30: error: expected ‘;’ before ‘list’
  118 |       temp = list->head->data
      |                              ^
      |                              ;
  119 |       list->head = NULL;
      |       ~~~~                    
list.c:129:42: error: expected ‘;’ before ‘return’
  129 |       list->current = list->current->next
      |                                          ^
      |                                          ;
  130 |       return temp;
      |       ~~~~~~                              
list.c: In function ‘nextList’:
list.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
list.c: In function ‘prevList’:
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
list.c: In function ‘popCurrent’:
list.c:133:1: error: control reaches end of non-void function [-Werror=return-type]
  133 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e7ce5cd
Fri 29 Mar 2024 03:50:06 AM UTC: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:19: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   50 |   list->current = current->next;
      |                   ^~~~~~~
      |                   popCurrent
list.c:50:19: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘prevList’:
list.c:59:19: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   59 |   list->current = current->prev;
      |                   ^~~~~~~
      |                   popCurrent
list.c: In function ‘popCurrent’:
list.c:118:7: error: ‘temp’ undeclared (first use in this function)
  118 |       temp = list->head->data;
      |       ^~~~
list.c:133:1: error: control reaches end of non-void function [-Werror=return-type]
  133 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ca7fc03
Fri 29 Mar 2024 03:50:43 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:59:19: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   59 |   list->current = current->prev;
      |                   ^~~~~~~
      |                   popCurrent
list.c:59:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5b6deab
Fri 29 Mar 2024 03:50:58 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7ab92ba
Fri 29 Mar 2024 03:53:21 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5eea496
Fri 29 Mar 2024 03:53:42 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
79b436e
Fri 29 Mar 2024 03:54:52 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4c0f2da
Fri 29 Mar 2024 03:55:16 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
26d0e84
Fri 29 Mar 2024 03:55:45 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
1ea0ba7
Fri 29 Mar 2024 03:58:13 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
d903f72
Fri 29 Mar 2024 03:59:11 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:64:3: error: expected ‘;’ before ‘}’ token
   64 |   }
      |   ^
Compilation failed
5f18dae
Fri 29 Mar 2024 03:59:53 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:64:3: error: expected ‘;’ before ‘}’ token
   64 |   }
      |   ^
Compilation failed
e8f9532
Fri 29 Mar 2024 03:59:59 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
001f6e1
Fri 29 Mar 2024 04:01:10 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
7665893
Fri 29 Mar 2024 04:01:34 AM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
414d278
Fri 29 Mar 2024 04:03:13 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
e24ccf3
Fri 29 Mar 2024 04:06:10 AM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
f909e58
Fri 29 Mar 2024 04:08:12 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
2de33a3
Fri 29 Mar 2024 04:09:31 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:90:9: error: ‘List’ {aka ‘struct List’} has no member named ‘head_prev’
   90 |     list->head_prev = nuevo_nodo;
      |         ^~
Compilation failed
21bfe73
Fri 29 Mar 2024 04:09:41 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
dd3c54e
Fri 29 Mar 2024 04:12:53 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  10|2
total_score: 45/70
483ce50
Fri 29 Mar 2024 04:13:55 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
77d3e63
Fri 29 Mar 2024 04:14:50 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
179d520
Fri 29 Mar 2024 04:18:16 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
0205865
Fri 29 Mar 2024 04:19:21 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
78d63b0
Fri 29 Mar 2024 04:19:44 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
b8d36b8
